--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
     "chart.js": "^3.4.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
+    "react-data-table-component": "^7.0.0-rc2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.10",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -42,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "datatables.net": "^1.10.25",
+    "jquery": "^3.6.0"
   }
 }
