--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tabs": "^3.2.2",
     "recharts": "^2.0.10",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
