--- a/client/package.json
+++ b/client/package.json
@@ -8,24 +8,25 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "axios": "^0.21.1",
+        "bootstrap": "^5.0.2",
         "chart.js": "^3.4.1",
+        "formik": "^2.2.9",
+        "history": "^4.10.1",
         "react": "^17.0.2",
         "react-chartjs-2": "^3.0.3",
         "react-data-table-component": "^7.0.0-rc2",
+        "react-datepicker": "^4.2.1",
         "react-dom": "^17.0.2",
         "react-icons": "^4.2.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
-        "react-tabs": "^3.2.2",
         "react-select": "^4.3.1",
+        "react-tabs": "^3.2.2",
         "recharts": "^2.0.10",
         "styled-components": "^5.3.0",
         "web-vitals": "^1.1.2",
-        "history": "^4.10.1",
-        "formik": "^2.2.9",
-        "axios": "^0.21.1",
-        "bootstrap": "^5.0.2",
         "yup": "^0.32.9"
     },
     "scripts": {
