--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
         "express": "^4.17.1",
         "express-session": "^1.17.2",
         "jsonwebtoken": "^8.5.1",
+        "multer": "^1.4.3",
         "mysql2": "^2.2.5",
         "nodeman": "^1.1.2"
     }
