--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "history": "^4.10.1",
         "react": "^17.0.2",
         "react-chartjs-2": "^3.0.3",
+        "react-countup": "^5.2.0",
         "react-data-table-component": "^7.0.0-rc2",
         "react-datepicker": "^4.2.1",
         "react-dom": "^17.0.2",
