--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
         "jsonwebtoken": "^8.5.1",
         "multer": "^1.4.3",
         "mysql2": "^2.2.5",
+        "nodemailer": "^6.6.3",
         "nodeman": "^1.1.2"
     }
 }
