--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
         "axios": "^0.21.1",
         "bootstrap": "^5.0.2",
         "chart.js": "^3.4.1",
+        "dompurify": "^2.3.1",
+        "draft-convert": "^2.1.12",
+        "draft-js": "^0.11.7",
         "formik": "^2.2.9",
         "history": "^4.10.1",
         "react": "^17.0.2",
@@ -19,6 +22,7 @@
         "react-data-table-component": "^7.0.0-rc2",
         "react-datepicker": "^4.2.1",
         "react-dom": "^17.0.2",
+        "react-draft-wysiwyg": "^1.14.7",
         "react-icons": "^4.2.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
