--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
         "react-scripts": "4.0.3",
         "react-select": "^4.3.1",
         "react-tabs": "^3.2.2",
+        "react-toastify": "^8.0.2",
         "recharts": "^2.0.10",
         "styled-components": "^5.3.0",
         "web-vitals": "^1.1.2",
