--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "draft-js": "^0.11.7",
         "formik": "^2.2.9",
         "history": "^4.10.1",
+        "nodemailer": "^6.6.3",
         "react": "^17.0.2",
         "react-chartjs-2": "^3.0.3",
         "react-countup": "^5.2.0",
@@ -27,10 +28,11 @@
         "react-icons": "^4.2.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.3",
+        "react-scripts": "^4.0.3",
         "react-select": "^4.3.1",
         "react-tabs": "^3.2.2",
         "react-toastify": "^8.0.2",
+        "reactstrap": "^8.10.0",
         "recharts": "^2.0.10",
         "styled-components": "^5.3.0",
         "web-vitals": "^1.1.2",
