--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "-": "0.0.1",
         "@material-ui/core": "^4.12.2",
         "@material-ui/icons": "^4.11.2",
         "@testing-library/jest-dom": "^5.14.1",
@@ -23,6 +24,7 @@
         "react-countup": "^5.2.0",
         "react-data-table-component": "^7.0.0-rc2",
         "react-datepicker": "^4.2.1",
+        "react-discussion-board": "^1.0.5",
         "react-dom": "^17.0.2",
         "react-draft-wysiwyg": "^1.14.7",
         "react-icons": "^4.2.0",
@@ -34,6 +36,7 @@
         "react-toastify": "^8.0.2",
         "reactstrap": "^8.10.0",
         "recharts": "^2.0.10",
+        "shards": "^1.0.3",
         "styled-components": "^5.3.0",
         "web-vitals": "^1.1.2",
         "yup": "^0.32.9",
