--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
         "draft-js": "^0.11.7",
         "formik": "^2.2.9",
         "history": "^4.10.1",
+        "mdb-react-ui-kit": "^1.3.0",
+        "mdbreact": "^5.1.0",
         "nodemailer": "^6.6.3",
         "react": "^17.0.2",
         "react-chartjs-2": "^3.0.3",
