--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "draft-js": "^0.11.7",
         "formik": "^2.2.9",
         "history": "^4.10.1",
+        "html-to-draftjs": "^1.5.0",
         "nodemailer": "^6.6.3",
         "react": "^17.0.2",
         "react-chartjs-2": "^3.0.3",
