--- a/clientside/package.json
+++ b/clientside/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.2.6",
     "d3-geo": "^1.11.3",
     "faker": "^4.1.0",
+    "formik": "^2.2.9",
     "history": "^5.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
@@ -28,7 +29,8 @@
     "react-toastify": "^8.0.2",
     "reactstrap": "^7.1.0",
     "toastify": "^2.0.1",
-    "victory": "^32.0.0"
+    "victory": "^32.0.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "gh-pages": "^1.2.0",
