--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
         "multer": "^1.4.3",
         "mysql2": "^2.2.5",
         "nodemailer": "^6.6.3",
-        "nodeman": "^1.1.2"
+        "nodeman": "^1.1.2",
+        "rand-token": "^1.0.1"
     }
 }
