--- a/clientside/package.json
+++ b/clientside/package.json
@@ -9,6 +9,9 @@
     "chart.js": "2.7.2",
     "classnames": "^2.2.6",
     "d3-geo": "^1.11.3",
+    "dompurify": "^2.3.2",
+    "draft-convert": "^2.1.12",
+    "draft-js": "^0.11.7",
     "faker": "^4.1.0",
     "formik": "^2.2.9",
     "history": "^5.0.1",
@@ -18,6 +21,7 @@
     "react-component-queries": "^2.3.0",
     "react-d3-map": "^0.8.3",
     "react-dom": "^16.8.4",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-ga": "^2.5.7",
     "react-icons": "^3.5.0",
     "react-infinite-calendar": "^2.3.1",
