--- a/clientside/package.json
+++ b/clientside/package.json
@@ -19,6 +19,7 @@
     "react": "^16.8.4",
     "react-chartjs-2": "^2.7.4",
     "react-component-queries": "^2.3.0",
+    "react-confirm-alert": "^2.7.0",
     "react-d3-map": "^0.8.3",
     "react-dom": "^16.8.4",
     "react-draft-wysiwyg": "^1.14.7",
