--- a/clientside/package.json
+++ b/clientside/package.json
@@ -15,6 +15,7 @@
     "faker": "^4.1.0",
     "formik": "^2.2.9",
     "history": "^5.0.1",
+    "jspdf": "^2.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-chartjs-2": "^2.7.4",
