--- a/clientside/package.json
+++ b/clientside/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.2.9",
     "history": "^5.0.1",
     "jspdf": "^2.4.0",
+    "react-countup": "^5.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-chartjs-2": "^2.7.4",
