--- a/clientside/package.json
+++ b/clientside/package.json
@@ -14,7 +14,9 @@
     "history": "^5.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
+    "react-calendar": "^3.4.0",
     "react-chartjs-2": "^2.7.4",
+    "react-circular-progressbar": "^2.0.4",
     "react-component-queries": "^2.3.0",
     "react-d3-map": "^0.8.3",
     "react-dom": "^16.8.4",
