--- a/clientside/package.json
+++ b/clientside/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.2.9",
     "history": "^5.0.1",
     "jspdf": "^2.4.0",
+    "pdfjs-dist": "^2.9.359",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-calendar": "^3.4.0",
