--- a/clientside/package.json
+++ b/clientside/package.json
@@ -28,6 +28,7 @@
     "react-d3-map": "^0.8.3",
     "react-dom": "^16.8.4",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-dropzone": "^11.4.0",
     "react-ga": "^2.5.7",
     "react-icons": "^3.5.0",
     "react-infinite-calendar": "^2.3.1",
