--- a/clientside/package.json
+++ b/clientside/package.json
@@ -35,6 +35,7 @@
     "react-notification-system": "^0.2.17",
     "react-pdf": "^5.3.2",
     "react-player": "^2.9.0",
+    "react-qr": "0.0.2",
     "react-qr-code": "^2.0.2",
     "react-rating-stars-component": "^2.2.0",
     "react-router": "^4.3.1",
